--- a/force-app/main/default/classes/nksJournalFeilregistrertQueueable.cls
+++ b/force-app/main/default/classes/nksJournalFeilregistrertQueueable.cls
@@ -1,47 +1,23 @@
-public with sharing class nksJournalFeilregistrertQueueable implements  Database.Batchable<SObject>, Database.Stateful, Database.AllowsCallouts {
-    private final static String fieldQuery = 'Select CRM_Journal_Post_Type__c, CRM_Theme_Code__c , CRM_Conversation_Note__c, CRM_Created_By_Ident__c, CRM_Created_By_NAV_Unit__c, CRM_NAV_Case_Legacy_System__c, CRM_Thread__c, NAV_Case_Reference__c, Theme__c, CRM_Thread__r.CRM_Type__c, Theme__r.CRM_Code__c FROM Journal_Entry__c';
-    private String queryFilter = 'Journal_Entry_ID__c != null AND ( ( CRM_Journal_Post_Type__c IN (\'UTGAAENDE\', \'INNGAAENDE\') AND CRM_Thread__r.CRM_Closed_Date__c >= 2024-10-18T11:30:00Z AND CRM_Thread__r.CRM_Closed_Date__c <= 2024-10-21T09:25:00Z AND CRM_Thread__r.CRM_Type__c IN (\'CHAT\', \'STB\') ) OR ( CRM_Conversation_note__c != null AND CreatedDate >= 2024-10-18T11:30:00Z AND CreatedDate <= 2024-10-21T09:25:00Z ) OR ( CRM_Journal_Post_Type__c IN (\'UTGAAENDE\', \'INNGAAENDE\') AND CRM_Thread__r.CRM_Type__c IN (\'STO\', \'BTO\', \'STB\') AND DAY_ONLY(CRM_Thread__r.CRM_Closed_Date__c) >= 2024-10-18 AND DAY_ONLY(CRM_Thread__r.CRM_Closed_Date__c) <= 2024-10-20 ))';
-    private final static integer chunkSize = 20;
-    private String externalReferenceSuffix = 'Rerun';
+public without sharing class nksJournalFeilregistrertQueueable implements  Database.Batchable<SObject>, Database.Stateful, Database.AllowsCallouts {
+    private final static String fieldQuery = 'Select Id, CRM_Journal_Post_Type__c, CRM_Theme_Code__c , CRM_Conversation_Note__c, CRM_Created_By_Ident__c, CRM_Created_By_NAV_Unit__c, CRM_NAV_Case_Legacy_System__c, CRM_Thread__c, NAV_Case_Reference__c, Theme__c, CRM_Thread__r.CRM_Type__c, CRM_Subtheme_Code__c, Subtheme__c FROM Journal_Entry__c';
+    private String queryFilter;
+    private String externalReferenceSuffix;
     private final LoggerUtility logger = new LoggerUtility('Journal Rerun');
 
-    @AuraEnabled
-    public static void startFromComponent(String externalReferenceSuffix, String wantedLimit){
-        try {
-            nksJournalFeilregistrertQueueable journalRerun =  new nksJournalFeilregistrertQueueable(externalReferenceSuffix);
-            String actualLimit = wantedLimit != null && String.isNotBlank(wantedLimit) ? wantedLimit : '20';
-            List<Journal_Entry__c> scope = (List<Journal_entry__c>) Database.query(fieldQuery + ' where Journal_Entry_Status__c = \'Rerun Failed\' limit ' + actualLimit);
-            journalRerun.processJournals(scope);
-        } catch (Exception e) {
-            throw new AuraHandledException(e.getMessage());
-        }
-    }
-
-    @AuraEnabled(cacheable = false)
-    public static Integer getRemainingCount(){
-        try {
-            return Database.countQuery('Select Count() from Journal_entry__c where Journal_Entry_Status__c = \'Rerun Failed\'');
-        } catch (Exception e) {
-            throw new AuraHandledException(e.getMessage());
-        }
-    }
-
-    public nksJournalFeilregistrertQueueable() {
-    }
-
-    public nksJournalFeilregistrertQueueable(String externalReferenceSuffix) {
-        if (externalReferenceSuffix != null && String.isNotBlank(externalReferenceSuffix)) {
-            this.externalReferenceSuffix = externalReferenceSuffix;
+    @InvocableMethod(
+        label='Initiate Journal rerun with externalReference suffix'
+        description='Starts a process for rerunning journal entries to JOARK'
+        category='Journal'
+    )
+    public static void initJournalBatcher(List<JournalRerunWrapper> inputs) {
+        for(JournalRerunWrapper input: inputs){
+            Database.executeBatch(new nksJournalFeilregistrertQueueable(input.externalReferenceSuffix, input.scope), 20);
         }
     }
 
     public nksJournalFeilregistrertQueueable(String externalReferenceSuffix, String queryFilter) {
-        if (externalReferenceSuffix != null && String.isNotBlank(externalReferenceSuffix)) {
-            this.externalReferenceSuffix = externalReferenceSuffix;
-        }
-        if (queryFilter != null && String.isNotBlank(queryFilter)) {
-            this.queryFilter = queryFilter;
-        }
+        this.externalReferenceSuffix = externalReferenceSuffix;
+        this.queryFilter = queryFilter;
     }
 
     public Database.QueryLocator start(Database.BatchableContext BC) {
@@ -54,27 +30,18 @@ public with sharing class nksJournalFeilregistrertQueueable implements  Database
     }
 
     private void processJournals(List<Journal_entry__c> scope) {
-        CRM_JournalEntryWrapper journalRequest;
+        List<Journal_Entry__c> jEntriesToUpdate = new List<Journal_Entry__c>();
         for (Journal_entry__c jEntry : scope) {
             try {
                 Map<String, Object> inputParameters = new Map<String, Object>();
                 inputParameters.put('PERFORM_DML', false);
                 inputParameters.put('externalReferenceSuffix', this.externalReferenceSuffix);
+                inputParameters.put('Journal_Entry_SF', jEntry);
 
                 Flow.Interview journalFlow;
-                Id referenceId;
                 if (jEntry.CRM_Conversation_Note__c != null) {
-                    referenceId = jEntry.CRM_Conversation_Note__c;
-                    inputParameters.put('recordId', jEntry.CRM_Conversation_Note__c);
-                    inputParameters.put('Journal_Case_ID', jEntry.NAV_Case_Reference__c);
-                    inputParameters.put('Journal_Case_Legacy_System', jEntry.CRM_NAV_Case_Legacy_System__c);
-                    inputParameters.put('Journal_Entry_NAV_Ident', jEntry.CRM_Created_By_Ident__c);
-                    inputParameters.put('Journal_Entry_Unit', jEntry.CRM_Created_By_NAV_Unit__c);
-                    inputParameters.put('Journal_Theme_Code', jEntry.Theme__r.CRM_Code__c);
-                    journalFlow = Flow.Interview.createInterview('CRM_Journal_Conversation_Note_v_2', inputParameters);
-                } else if (jEntry.CRM_Thread__c != null) {
-                    referenceId = jEntry.CRM_Thread__c;
-                    inputParameters.put('Journal_Entry_SF', jEntry);
+                    journalFlow = Flow.Interview.createInterview('Journal_Conversation_Note_Retry', inputParameters);
+                } else if (jEntry.CRM_Thread__c != null) {                    
                     if (jEntry.CRM_Thread__r.CRM_Type__c == 'CHAT') {
                         journalFlow = Flow.Interview.createInterview('CHAT_Journal_CHAT_Thread', inputParameters);
                     } else if (new List<String>{ 'STO', 'BTO', 'STB' }.contains(jEntry.CRM_Thread__r.CRM_Type__c)) {
@@ -85,50 +52,24 @@ public with sharing class nksJournalFeilregistrertQueueable implements  Database
                     continue;
                 }
                 journalFlow.start();
-
-                journalRequest = (CRM_JournalEntryWrapper) journalFlow.getVariableValue('Journal_Request');
-                Blob checker = Blob.valueOf(JSON.serialize(journalRequest, true));
-                // below converts blob to hexadecimal representation; four ones and zeros 
-                // from blob will get converted to single hexadecimal character
-                String hexString = EncodingUtil.convertToHex(checker);
-
-                // One byte consists of eight ones and zeros so, one byte consists of two 
-                // hex characters, hence the number of bytes would be
-                Integer numOfBytes = hexString.length() / 2;
-                if(numOfBytes < 4500) {
-                    logger.error('Journal entry ' + jEntry.Id + ' resulted in a request of size ' + numOfBytes + ', aborting request. The full request was: \n' + JSON.serialize(journalRequest, true) + ' \nInputs were: ' + JSON.serialize(inputParameters, true),  null, CRM_ApplicationDomain.Domain.NKS);
-                    jEntry.Journal_Entry_Status__c = 'Rerun Failed';
-                    continue;
-                }
-                CRM_JournalUtilities.UtilityResponse resp = CRM_JournalUtilities.postJournal(
-                    journalRequest,
-                    referenceId,
-                    jEntry.CRM_Created_By_Ident__c
-                );
-
-                jEntry.Journal_Entry_Status__c = resp.success ? 'Completed' : 'Rerun Failed';
-                if (resp == null || resp.success == false) {
-                    logger.error(
-                        'Could not post rerun Journal, error: ' + resp.errorMessage,
-                        jEntry,
-                        CRM_ApplicationDomain.Domain.NKS
-                    );
-                } else {
-                    if (resp.duplicate) {
-                        jEntry.Journal_Entry_Status__c = 'Duplicate';
-                    }
-                    jEntry.Journal_Entry_ID__c = resp.journalpostId;
-                }
+                jEntriesToUpdate.add((Journal_Entry__c) journalFlow.getVariableValue('Journal_Entry_SF'));
             } catch (Exception e) {
                 logger.error('Queued failed, exception: ' + e.getMessage(), jEntry, CRM_ApplicationDomain.Domain.NKS);
             }
         }
-        update scope;
+        update jEntriesToUpdate;
         logger.publish();
     }
     
     public void finish(Database.BatchableContext BC) {
         logger.info('Done with nksJournalFeilregistrertQueueable', null, CRM_ApplicationDomain.Domain.NKS);
         logger.publish();
+    }
+
+    public class JournalRerunWrapper {
+        @invocableVariable(required=true)
+        public String scope;
+        @invocableVariable(required=true)
+        public String externalReferenceSuffix;
     }
 }
